--- a/Config/templates/index.html
+++ b/Config/templates/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="https://h.top4top.io/p_3535564bl0.gif" type="image/x-icon" />
     <title>TOMCAT C2 Framework</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
@@ -30,7 +29,7 @@
                             Version 2.0
                         </div>
                         <div class="logo-subtitle">
-                            Peace Is Not An Option
+                            Hunt | Hack | Conquer
                         </div>
                     </div>
                 </div>
